--- a/design-system.html
+++ b/design-system.html
@@ -13,8 +13,8 @@
     rel="stylesheet">
 
 
-  <link rel="stylesheet" href="https://richllew182.github.io/space-tourism/index.css">
-  <link rel="icon" type="image/png" sizes="32x32" href="https://richllew182.github.io/space-tourism/assets/favicon-32x32.png">
+  <link rel="stylesheet" href="index.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
 
   <title>Space tourism website</title>
 </head>
