--- a/design-system.html
+++ b/design-system.html
@@ -112,11 +112,11 @@
 
     </section>
 
-    <section class="flow" id="interactive-elements">
+    <section id="interactive-elements">
       <h2 class="numbered-title"><span>03</span> Interactive elements</h2>
 
       <!-- navigation -->
-      <div>
+      <div class="flow">
         <nav>
           <ul class="primary-navigation underline-indicators flex">
             <li class="active"><a class="ff-sans-cond fs-400 uppercase letter-spacing-2 text-white"
