--- a/index.html
+++ b/index.html
@@ -8,24 +8,56 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed&family=Bellefair&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="https://richllew182.github.io/space-tourism/index.css">
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+  <link rel="stylesheet" href="index.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
 
   <title>Space Tourism Website</title>
 </head>
 
-<body class="home-page bg-dark">
+<body class="home-page">
 
 
   <div class="container">
-    <h1>Design system</h1>
 
-    <section id="colors">
-      <h2><span>01</span> colors</h2>
+    <div class="flow">
+      <!-- navigation -->
 
+      <nav>
+        <ul class="primary-navigation underline-indicators flex">
+          <img class="logo" src="assets/shared/logo.svg" alt="Main Logo">
+          <li class="active"><a class="ff-sans-cond fs-400 uppercase letter-spacing-2 text-white" href="#">Home</a>
+          </li>
+          <li><a class="ff-sans-cond fs-400 uppercase letter-spacing-2 text-white"
+              href="#"><span>01</span>Desination</a>
+          </li>
+          <li><a class="ff-sans-cond fs-400 uppercase letter-spacing-2 text-white" href="#"><span>02</span>Crew</a>
+          </li>
+          <li><a class="ff-sans-cond fs-400 uppercase letter-spacing-2 text-white"
+              href="#"><span>03</span>Technology</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+
+
+    <section id="mainBody">
+      <div class="flow">
+        <div>
+          <p class="ff-sans-cond fs-400 uppercase text-accent letter-spacing-2">So, you want to travel to</p>
+          <h1 class="ff-serif fs-750 text-white uppercase">Space</h1>
+          <p>Let’s face it; if you want to go to space, you might as well genuinely go to
+            outer space and not hover kind of on the edge of it. Well sit back, and relax
+            because we’ll give you a truly out of this world experience!</p>
+        </div>
+        <div>
+          <a class=" large-button bg-white text-dark uppercase ff-serif fs-600" href="#">Explore</a>
+        </div>
+      </div>
     </section>
+
   </div>
 
 </body>
+
 
 </html>
